--- a/bin/wlogin.in
+++ b/bin/wlogin.in
@@ -10,326 +10,17 @@
 # Modified from clogin for use with WLCs 4/17/2008 - Josh Yost
 #
 # Most options are intuitive for logging into a Cisco router.
-# The default is to enable (thus -noenable).  Some folks have
-# setup tacacs to have a user login at priv-lvl = 15 (enabled)
-# so the -autoenable flag was added for this case (don't go through
-# the process of enabling and the prompt will be the "#" prompt.
-# The default username password is the same as the vty password.
+# The WLC does not have an enable mode.
 #
 
-# XXX need to import login_top.
-
-# Usage line
-set usage "Usage: $argv0 \[-dSV\] \[-autoenable\] \[-noenable\] \[-c command\] \
-\[-Evar=x\] \[-e enable-password\] \[-f cloginrc-file\] \[-p user-password\] \
-\[-r passphrase\] \[-s script-file\] \[-t timeout\] \[-u username\] \
-\[-v vty-password\] \[-w enable-username\] \[-x command-file\] \
-\[-y ssh_cypher_type\] router \[router...\]\n"
-
-# env(CLOGIN) may contain:
-#	x == do not set xterm banner or name
-
-# Password file
-set password_file $env(HOME)/.cloginrc
-# Default is to login to the router
-set do_command 0
-set do_script 0
-# The default is to automatically enable
-set avenable 1
-# The default is that you login non-enabled (tacacs can have you login already
-# enabled)
-set avautoenable 0
-# The default is to look in the password file to find the passwords.  This
-# tracks if we receive them on the command line.
-set do_passwd 1
-set do_enapasswd 1
-# Save config, if prompted
-set do_saveconfig 0
-# cloginrc debugging knob
-set do_cloginrcdbg 0
-# Sometimes routers take awhile to answer (the default is 10 sec)
-set timeoutdflt 10
-# intialize cloginrc parsing stacks
-set int_file {}
-set int_lineno {}
 # Some CLIs having problems if we write too fast (Extreme, PIX, Cat)
 set send_human {.2 .1 .4 .2 1}
 
-# Find the user in the ENV, or use the unix userid.
-if {[ info exists env(CISCO_USER) ]} {
-    set default_user $env(CISCO_USER)
-} elseif {[ info exists env(USER) ]} {
-    set default_user $env(USER)
-} elseif {[ info exists env(LOGNAME) ]} {
-    set default_user $env(LOGNAME)
-} else {
-    # This uses "id" which I think is portable.  At least it has existed
-    # (without options) on all machines/OSes I've been on recently -
-    # unlike whoami or id -nu.
-    if [ catch {exec id} reason ] {
-	send_error "\nError: could not exec id: $reason\n"
-	exit 1
-    }
-    regexp {\(([^)]*)} "$reason" junk default_user
-}
-
-# Sometimes routers take awhile to answer (the default is 10 sec)
-set timeout 45
-
-# Process the command line
-for {set i 0} {$i < $argc} {incr i} {
-    set arg [lindex $argv $i]
-
-    switch  -glob -- $arg {
-	# Command to run.
-	-c* {
-	    if {! [  regexp .\[cC\](.+) $arg ignore command]} {
-		incr i
-		set command [ lindex $argv $i ]
-	    }
-	    set do_command 1
-	# Expect debug mode
-	} -d* {
-	    exp_internal 1
-	# Environment variable to pass to -s scripts
-	} -E*
-	{
-	    if {[ regexp .\[E\](.+)=(.+) $arg ignore varname varvalue]} {
-		set E$varname $varvalue
-	    } else {
-		send_user "\nError: invalid format for -E in $arg\n"
-		exit 1
-	    }
-	# alternate cloginrc file
-	} -f* {
-	    if {! [ regexp .\[fF\](.+) $arg ignore password_file]} {
-		incr i
-		set password_file [ lindex $argv $i ]
-	    }
-	# cloginrc debugging knobs
-	} -m* {
-	    set do_cloginrcdbg 1
-	} -M* {
-	    set do_cloginrcdbg 2
-	# VTY Password
-	} -p* -
-	-P* {
-	    if {! [  regexp .\[pP\](.+) $arg ignore userpasswd]} {
-		incr i
-		set userpasswd [ lindex $argv $i ]
-	    }
-	    set do_passwd 0
-	# Enable Password
-	} -e*
-	{
-	    if {! [  regexp .\[e\](.+) $arg ignore enapasswd]} {
-		incr i
-		set enapasswd [ lindex $argv $i ]
-	    }
-	    set do_enapasswd 0
-	# Expect script to run.
-	} -s* {
-	    if {! [  regexp .\[sS\](.+) $arg ignore sfile]} {
-		incr i
-		set sfile [ lindex $argv $i ]
-	    }
-	    if { ! [ file readable $sfile ] } {
-		send_user "\nError: Can't read $sfile\n"
-		exit 1
-	    }
-	    set do_script 1
-	# save config on exit
-	} -S* {
-	    set do_saveconfig 1
-	# Timeout
-	} -t* {
-	    if {! [ regexp .\[tT\](.+) $arg ignore timeout]} {
-		incr i
-	        set timeout [ lindex $argv $i ]
-	    }
-	# VTY Password
-	} -v* {
-	    if {! [  regexp .\[vV\](.+) $arg ignore passwd]} {
-		incr i
-		set passwd [ lindex $argv $i ]
-	    }
-	    set do_passwd 0
-	# Version string
-	} -V* {
-	    send_user "@PACKAGE@ @VERSION@\n"
-	    exit 0
-	# Enable Username
-	} -w* -
-	-W* {
-	    if {! [  regexp .\[wW\](.+) $arg ignore enauser]} {
-		incr i
-		set enausername [ lindex $argv $i ]
-	    }
-	# Username
-	} -u* {
-	    if {! [  regexp .\[uU\](.+) $arg ignore user]} {
-		incr i
-		set username [ lindex $argv $i ]
-	    }
-	# Timeout
-	} -t* {
-	    if {! [regexp .\[tT\](.+) $arg ignore timeout]} {
-		incr i
-		set timeoutdflt [lindex $argv $i]
-	    }
-	# Command file
-	} -x* {
-	    if {! [  regexp .\[xX\](.+) $arg ignore cmd_file]} {
-		incr i
-		set cmd_file [ lindex $argv $i ]
-	    }
-	    if [ catch {set cmd_fd [open $cmd_file r]} reason ] {
-		send_user "\nError: $reason\n"
-		exit 1
-	    }
-	    set cmd_text [read $cmd_fd]
-	    close $cmd_fd
-	    set command [join [split $cmd_text \n] \;]
-	    set do_command 1
-	# 'ssh -c' cypher type
-	} -y* {
-	    if {! [  regexp .\[eE\](.+) $arg ignore cypher]} {
-		incr i
-		set cypher [ lindex $argv $i ]
-	    }
-	# Do we enable?
-	} -noenable {
-	    set avenable 0
-	# Does tacacs automatically enable us?
-	} -autoenable {
-	    set avautoenable 1
-	    set avenable 0
-	} -* {
-	    send_user "\nError: Unknown argument! $arg\n"
-	    send_user $usage
-	    exit 1
-	} default {
-	    break
-	}
-    }
-}
-# Process routers...no routers listed is an error.
-if { $i == $argc } {
-    send_user "\nError: $usage"
-}
-
-# Only be quiet if we are running a script (it can log its output
-# on its own)
-if { $do_script } {
-    log_user 0
-} else {
-    log_user 1
-}
-
-#
-# Done configuration/variable setting.  Now run with it...
-#
-
-# Sets Xterm title if interactive...if its an xterm and the user cares
-proc label {host} {
-    global env
-    # if CLOGIN has an 'x' in it, don't set the xterm name/banner
-    if [info exists env(CLOGIN)] {
-	if {[string first "x" $env(CLOGIN)] != -1} { return }
-    }
-    # take host from ENV(TERM)
-    if [info exists env(TERM)] {
-	if [regexp \^(xterm|vs) $env(TERM) ignore] {
-	    send_user "\033]1;[lindex [split $host "."] 0]\a"
-	    send_user "\033]2;$host\a"
-	}
-    }
-}
-
-# This is a helper function to make the password file easier to
-# maintain.  Using this the password file has the form:
-# add password sl*	pete cow
-# add password at*	steve
-# add password *	hanky-pie
-proc add {var args} {
-    global int_file int_lineno int_$var
-    set file [lindex $int_file 0]
-    set lineno [lindex $int_lineno 0]
-    lappend int_$var "$var:$file:$lineno: $args"
-}
-proc include {args} {
-    global env
-    regsub -all "(^{|}$)" $args {} args
-    if {[regexp "^/" $args ignore] == 0} {
-	set args $env(HOME)/$args
-    }
-    source_password_file $args
-}
-
-proc find {var router} {
-    global do_cloginrcdbg
-    upvar int_$var list
-    if {[info exists list]} {
-	foreach line $list {
-	    if {[string match -nocase [lindex $line 1] $router]} {
-		if {$do_cloginrcdbg > 0} {
-		    send_error -- [join [list [lindex $line 0] [lrange $line 1 end] "\r\n"]]
-		}
-		if {$do_cloginrcdbg == 2} {
-		    # save return value
-		    if {! [info exists result]} {
-			set result [lrange $line 2 end]
-		    }
-		} else {
-		    return [lrange $line 2 end]
-		}
-	    }
-	}
-    }
-
-    if {$do_cloginrcdbg == 2} {
-	if {[info exists result]} {
-	    return $result
-	}
-    }
-    return {}
-}
-
-# Loads the password file.  Note that as this file is tcl, and that
-# it is sourced, the user better know what to put in there, as it
-# could install more than just password info...  I will assume however,
-# that a "bad guy" could just as easy put such code in the clogin
-# script, so I will leave .cloginrc as just an extention of that script
-proc source_password_file {file} {
-    global env int_file int_lineno
-    if {! [file exists $file]} {
-	send_user "\nError: password file ($file) does not exist\n"
-	exit 1
-    }
-    file stat $file fileinfo
-    if {[expr ($fileinfo(mode) & 007)] != 0000} {
-	send_user "\nError: $file must not be world readable/writable\n"
-	exit 1
-    }
-    if [catch {set fd [open $file "r"]} reason] {
-	send_user "\nError: $reason\n"
-	exit 1
-    }
-    set int_file [linsert $int_file 0 $file]
-    set int_lineno [linsert $int_lineno 0 0]
-    while {[gets $fd line] >= 0} {
-	set tmp [lindex $int_lineno 0]; incr tmp
-	lset int_lineno 0 $tmp
-	eval $line
-    }
-    set int_file [lrange $int_file 1 end]
-    set int_lineno [lrange $int_lineno 1 end]
-    close $fd
-}
+@login_top@
 
 # Log into the router.
 # returns: 0 on success, 1 on failure, -1 if rsh was used successfully
-proc login { router user userpswd passwd enapasswd cmethod cyphertype } {
+proc login { router user userpswd passwd cmethod cyphertype } {
     global spawn_id in_proc do_command do_script
     global prompt u_prompt p_prompt e_prompt sshcmd telnetcmd
     set in_proc 1
@@ -595,38 +286,6 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype } {
     return 0
 }
 
-# Enable
-proc do_enable { enauser enapasswd } {
-    global prompt in_proc
-    global u_prompt e_prompt
-    set in_proc 1
-
-    send "enable\r"
-    expect {
-	-re "$u_prompt"	{ send "$enauser\r"; exp_continue}
-	-re "$e_prompt"	{ send "$enapasswd\r"; exp_continue}
-	"#"		{ set prompt "#" }
-	"(enable)"	{ set prompt "> (enable) " }
-	-re "(denied|Sorry|Incorrect)"	{
-			  # % Access denied - from local auth and poss. others
-			  send_user "\nError: Check your Enable passwd\n";
-			  return 1
-			}
-	"% Error in authentication" {
-			  send_user "\nError: Check your Enable passwd\n"
-			  return 1
-			}
-	"% Bad passwords" {
-			  send_user "\nError: Check your Enable passwd\n"
-			  return 1
-			}
-    }
-    # We set the prompt variable (above) so script files don't need
-    # to know what it is.
-    set in_proc 0
-    return 0
-}
-
 # Run commands given on the command line.
 proc run_commands { prompt command } {
     global in_proc
@@ -731,44 +390,16 @@ foreach router [lrange $argv $i end] {
     }
 
     # Figure out the prompt.
-    # autoenable is off by default.  If we have it defined, it was done
-    # on the command line.  If it is not specifically set on the command
-    # line, check the password file.
-    if $avautoenable {
-	set autoenable 1
-	set enable 0
-	set prompt "(#| \\(enable\\))"
-    } else {
-	set ae [find autoenable $router]
-	if { "$ae" == "1" } {
-	    set autoenable 1
-	    set enable 0
-	    set prompt "(#| \\(enable\\)|>)"
-	} else {
-	    set autoenable 0
-	    set enable $avenable
-	    set prompt ">"
-	}
-    }
-
-    # look for noenable option in .cloginrc
-    if { [find noenable $router] != "" } {
-	set enable 0
-    }
+    set prompt ">"
 
     # Figure out passwords
-    if { $do_passwd || $do_enapasswd } {
+    if { $do_passwd } {
       set pswd [find password $router]
       if { [llength $pswd] == 0 } {
 	send_user -- "\nError: no password for $router in $password_file.\n"
 	continue
       }
-      if { $enable && $do_enapasswd && $autoenable == 0 && [llength $pswd] < 2 } {
-	send_user -- "\nError: no enable password for $router in $password_file.\n"
-	continue
-      }
       set passwd [join [lindex $pswd 0] ""]
-      set enapasswd [join [lindex $pswd 1] ""]
     }
 
     # Figure out username
@@ -789,15 +420,6 @@ foreach router [lrange $argv $i end] {
       if { "$userpswd" == "" } { set userpswd $passwd }
     }
 
-    # Figure out enable username
-    if {[info exists enausername]} {
-      # command line enausername
-      set enauser $enausername
-    } else {
-      set enauser [join [find enauser $router] ""]
-      if { "$enauser" == "" } { set enauser $ruser }
-    }
-
     # Figure out prompts
     set u_prompt [find userprompt $router]
     if { "$u_prompt" == "" } {
@@ -810,12 +432,6 @@ foreach router [lrange $argv $i end] {
 	set p_prompt "(\[Pp]assword|passwd):"
     } else {
 	set p_prompt [join [lindex $p_prompt 0] ""]
-    }
-    set e_prompt [find enableprompt $router]
-    if { "$e_prompt" == "" } {
-	set e_prompt "\[Pp]assword:"
-    } else {
-	set e_prompt [join [lindex $e_prompt 0] ""]
     }
 
     # Figure out cypher type
@@ -842,20 +458,12 @@ foreach router [lrange $argv $i end] {
     if { $do_cloginrcdbg > 0 } { continue; }
 
     # Login to the router
-    if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype]} {
+    if {[login $router $ruser $userpswd $passwd $cmethod $cyphertype]} {
 	incr exitval
 	# if login failed or rsh was successful, move on to the next device
 	continue
     }
-    if { $enable } {
-	if {[do_enable $enauser $enapasswd]} {
-	    if { $do_command || $do_script } {
-		incr exitval
-		catch {close}; catch {wait};
-		continue
-	    }
-	}
-    }
+
     # we are logged in, now figure out the full prompt
     send "\r"
     expect {
