control_rancid: cosmetic typo - Reuben Farrelly wlogin: alter the reprompt regex in run_commands(), the prompt on the wlc is not followed by any contexzt-relative info.

--- a/bin/control_rancid.in
+++ b/bin/control_rancid.in
@@ -607,7 +607,7 @@ do
 	rm -f $DIR/routers.up.missed
 	round=`expr $round + 1`
     else
-	echo "All routers sucessfully completed."
+	echo "All routers successfully completed."
 	round=`expr $pass + 1`
     fi
 done
