waveserver.pm: adjust prompt for the case where a ^ appears in the prompt after displaying the config.
eg:
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
! END OF CONFIG:
!
hostname1^>logout
SHELL PARSER FAILURE: 'logout' - no matching entry found
hostname1> exit

--- a/lib/wavesvros.pm.in
+++ b/lib/wavesvros.pm.in
@@ -65,10 +65,13 @@ TOP: while (<$INPUT>) {
 	while (/[>#]\s*($cmds_regexp)\s*$/) {
 	    $cmd = $1;
 	    if (!defined($prompt)) {
-		$prompt = ($_ =~ /^([^>#]+[>#])/)[0];
+		$_ =~ /^([^>#*^]+)([*^])?([>#])/;
+		$prompt = $1;
+		my($tail) = $3;
 		$prompt =~ s/([][}{)(\\])/\\$1/g;
-		# prompt changes when config is unsaved - "foo*> "
-		$prompt =~ s/\*/\\\*/;
+		# prompt changes when config is unsaved - "foo*> " and may be
+		# "foo$> " for some unknown reason.
+		$prompt .= "[*^]?" . $tail . " ?";
 		print STDERR ("PROMPT MATCH: $prompt\n") if ($debug);
 	    }
 	    print STDERR ("HIT COMMAND:$_") if ($debug);
