arbor.pm: fail on intermittent h/w retrieval failure

--- a/lib/arbor.pm.in
+++ b/lib/arbor.pm.in
@@ -179,6 +179,9 @@ sub ShowHardware {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if (/invalid command/i);
 
+	# observed intermittently on T4008 running 8.2.0.
+	return(-1) if (/error getting board version/i);
+
 	# some stupid timer error from this half-assed device
 	next if (/comsh: timer error, idle timeout will be unavailable/i);
 
