--- a/rancid/bin/ulogin.in
+++ b/rancid/bin/ulogin.in
@@ -15,6 +15,8 @@
 # The default username password is the same as the vty password.
 #
 
+# Sometimes routers take awhile to answer (the default is 10 sec)
+set timeoutdflt 30
 # Some CLIs having problems if we write too fast
 set send_human {.2 .1 .4 .2 1}
 
