aeos.pm: handle new power supply output format
Change from

System temperature status is: Ok
                                                                Alert   Critical
Sensor  Description                            Temperature  Threshold  Threshold
------- ------------------------------------ ------------- ---------- ----------
1       Cpu temp sensor                            42.986C       105C       115C
2       Front internal sensor                      35.000C        75C        85C
3       Front external sensor                      36.000C        60C        75C
4       Rear internal sensor                       29.000C        75C        85C
5       Rear external sensor                       26.000C        60C        75C
6       Switch ASIC Center                         50.389C       100C       110C
7       Switch ASIC Lower Left Corner              50.931C       100C       110C
8       Switch ASIC Upper Right Edge               49.846C       100C       110C

System cooling status is: Ok
Ambient temperature: 26C
Airflow: back-to-front
Fan              Status          Configured Speed     Actual Speed
---------------- --------------- ---------------- ----------------
1/1              Ok                           42%              41%
2/1              Ok                           42%              42%

Power                                  Input    Output   Output
Supply  Model                Capacity  Current  Current  Power    Status
------- -------------------- --------- -------- -------- -------- -------------
1       PWR-00194-01               65W      N/A      N/A      N/A Ok
2       PWR-00194-01               65W      N/A      N/A      N/A Ok
Total   --                        130W       --       --  Unknown --

to

System temperature status is: Ok
                                                                 Alert  Critical
                                               Temp    Setpoint  Limit     Limit
Sensor  Description                          

--- a/lib/aeos.pm.in
+++ b/lib/aeos.pm.in
@@ -99,7 +99,7 @@ sub ShowVersion {
 
     while (<$INPUT>) {
 	tr/\015//d;
-	if (/^$prompt/) { $found_version = 1; last};
+	if (/^$prompt/) {$found_version = 1; last};
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if /^% Invalid input/;
 	return(0) if ($found_version);		# Only do this routine once
@@ -144,11 +144,11 @@ sub DiffConfig {
 sub ShowEnv {
     my($INPUT, $OUTPUT, $cmd) = @_;
     print STDERR "    In ShowEnv: $_" if ($debug);
-    my($fans, $supplies, $E0) = (0, 0, undef);
+    my($fans, $E0) = (0, undef);
 
     while (<$INPUT>) {
 	tr/\015//d;
-	if (/^$prompt/) { $found_env = 1; last};
+	if (/^$prompt/) {$found_env = 1; last};
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if /^% Invalid input/;
 	return(0) if ($found_env);		# Only do this routine once
@@ -165,14 +165,19 @@ sub ShowEnv {
         }
         $fans && /^\s*(\d+)\s+(\S+)/ &&
             ProcessHistory("COMMENTS","keysort","E1","!Fan $1: $2\n") && next;
-        if (/^Supply\s+Model\s+Capacity/) {
-            $fans = 0;
-            $supplies = 1;
-            next;
+        if (/^supply\s+model\s+capacity/i) {
+	    while (<$INPUT>) {
+		tr/\015//d;
+		last if (/^\s*/);
+		if (/^$prompt/) {$found_version = 1; last};
+		/^\s*(\d+)\s+(\S+)\s+(\S+)\s+\S+\s+\S+\s+\S+\s+(\S+)/ &&
+		    ProcessHistory("COMMENTS","keysort","E2","!Power Supply $1: $2 $3 $4\n");
+		    next;
+		/^\s*Total\s+\S+\s+(\S+)\s+/ &&
+		    ProcessHistory("COMMENTS","keysort","E2","!Power Total: $1\n") &&
+		    next;;
+            }
         }
-        $supplies && /^\s*(\d+)\s+(\S+)\s+(\S+)\s+\S+\s+\S+\s+\S+\s+(.+)/ &&
-            ProcessHistory("COMMENTS","keysort","E2","!Power Supply $1: $2 $3 $4\n" ) &&
-	    next;
     }
     ProcessHistory("COMMENTS","","","!\n");
     return(0);
@@ -209,8 +214,8 @@ sub ShowBootExt {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
-	return(1) if /^% Invalid input/;
-        return(0) if /^% Error displaying /;
+	return(1) if (/^% Invalid input/);
+        return(0) if (/^% Error displaying /);
 
 	if (!defined($C0)) {
 	    $C0 = 1; ProcessHistory("COMMENTS","","","!\n");
