nx.pm: filter debug_logs/ in flash output - Charles T. Brooks

--- a/lib/nxos.pm.in
+++ b/lib/nxos.pm.in
@@ -497,7 +497,8 @@ sub DirSlotN {
 	/\s+vtp_debug(_old)?\.log$/ && next;
 
 	next if (/BufferMonitor-1HourData/);
-	if (/ log\/$/) {
+
+	if (/( debug_logs| log)\/$/) {
 	    # change
 	    #         8192    Jan 08 14:05:05 2015  log/
 	    # to
