--- a/bin/tlogin.in
+++ b/bin/tlogin.in
@@ -7,7 +7,7 @@
 #
 # The login expect scripts were based on Erik Sherk's gwtn, by permission.
 #
-# tlogin - Netopis login
+# tlogin - Netopia login
 #
 # Modified by Ed Ravin for Netopia.
 
